--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,10 @@
     "koa": "^2.13.3",
     "koa-bodyparser": "^4.3.0",
     "koa-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0",
+    "koa-morgan": "^1.0.1",
+    "mongoose": "^6.0.10"
   }
 }
